--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,149 +6,161 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:background="@android:color/white">
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-        <android.support.constraint.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+    <!--<ScrollView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--app:layout_constraintTop_toTopOf="parent"-->
+        <!--app:layout_constraintEnd_toEndOf="parent"-->
+        <!--app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--app:layout_constraintStart_toStartOf="parent">-->
+        <!--<android.support.constraint.ConstraintLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content">-->
+    <!--<ImageView-->
+        <!--android:layout_width="80dp"-->
+        <!--android:layout_height="80dp"-->
+        <!--android:src="@drawable/ss1"-->
+        <!--app:layout_constraintStart_toStartOf="parent"-->
+        <!--app:layout_constraintEnd_toEndOf="parent"-->
+        <!--app:layout_constraintTop_toTopOf="parent"-->
+        <!--app:layout_constraintBottom_toTopOf="@id/signIn"-->
+        <!--android:id="@+id/logo"-->
+        <!--/>-->
+    <!--<TextView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:id="@+id/signIn"-->
+        <!--android:text="@string/signIn"-->
+        <!--android:textSize="25sp"-->
+        <!--android:textStyle="bold"-->
+        <!--app:layout_constraintTop_toBottomOf="@id/logo"-->
+        <!--app:layout_constraintEnd_toEndOf="parent"-->
+        <!--app:layout_constraintStart_toStartOf="parent"-->
+        <!--app:layout_constraintBottom_toTopOf="@id/view"-->
+        <!--android:layout_margin="10sp"-->
+        <!--android:textColor="@android:color/black"-->
+        <!--/>-->
+    <!--<TextView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:id="@+id/view"-->
+        <!--android:text="@string/view_near"-->
+        <!--android:textSize="18sp"-->
+        <!--android:textStyle="normal"-->
+        <!--android:textColor="@android:color/black"-->
+        <!--app:layout_constraintTop_toBottomOf="@id/signIn"-->
+        <!--app:layout_constraintStart_toStartOf="parent"-->
+        <!--app:layout_constraintBottom_toTopOf="@id/offers"-->
+        <!--android:layout_marginStart="10sp"-->
+        <!--android:layout_marginTop="5sp"-->
+        <!--/>-->
+    <!--<TextView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:id="@+id/offers"-->
+        <!--android:text="@string/new_offers"-->
+        <!--android:textSize="18sp"-->
+        <!--android:textStyle="normal"-->
+        <!--android:textColor="@android:color/black"-->
+        <!--app:layout_constraintTop_toBottomOf="@id/view"-->
+        <!--app:layout_constraintStart_toStartOf="parent"-->
+        <!--app:layout_constraintBottom_toTopOf="@id/track"-->
+        <!--android:layout_marginStart="10sp"-->
+        <!--android:layout_marginTop="5sp"-->
+        <!--/>-->
+    <!--<TextView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:id="@+id/track"-->
+        <!--android:text="@string/track"-->
+        <!--android:textSize="18sp"-->
+        <!--android:textStyle="normal"-->
+        <!--android:textColor="@android:color/black"-->
+        <!--app:layout_constraintTop_toBottomOf="@id/offers"-->
+        <!--app:layout_constraintStart_toStartOf="parent"-->
+        <!--app:layout_constraintBottom_toTopOf="@id/already"-->
+        <!--android:layout_marginStart="10sp"-->
+        <!--android:layout_marginTop="5sp"-->
+        <!--/>-->
+    <!--<Button-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:background="@drawable/button"-->
+        <!--android:layout_marginTop="10sp"-->
+        <!--android:layout_marginStart="10sp"-->
+        <!--android:layout_marginEnd="10sp"-->
+        <!--android:id="@+id/already"-->
+        <!--android:textColor="@android:color/white"-->
+        <!--app:layout_constraintTop_toBottomOf="@id/track"-->
+        <!--app:layout_constraintStart_toStartOf="parent"-->
+        <!--app:layout_constraintEnd_toEndOf="parent"-->
+        <!--app:layout_constraintBottom_toTopOf="@id/create"-->
+        <!--android:text="@string/already"-->
+        <!--android:textAllCaps="false"-->
+        <!--android:textSize="15sp"-->
+        <!--android:onClick="goHome"-->
+        <!--/>-->
+    <!--<Button-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:background="@drawable/button"-->
+        <!--android:layout_marginTop="10sp"-->
+        <!--android:layout_marginStart="10sp"-->
+        <!--android:layout_marginEnd="10sp"-->
+        <!--android:id="@+id/create"-->
+        <!--android:textColor="@android:color/white"-->
+        <!--app:layout_constraintTop_toBottomOf="@id/already"-->
+        <!--app:layout_constraintStart_toStartOf="parent"-->
+        <!--app:layout_constraintEnd_toEndOf="parent"-->
+        <!--app:layout_constraintBottom_toTopOf="@id/skip"-->
+        <!--android:text="@string/create"-->
+        <!--android:textAllCaps="false"-->
+        <!--android:textSize="15sp"-->
+        <!--/>-->
+
+    <!--<Button-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:background="@drawable/button"-->
+        <!--android:layout_marginTop="10sp"-->
+        <!--android:layout_marginStart="10sp"-->
+        <!--android:layout_marginEnd="10sp"-->
+        <!--android:id="@+id/skip"-->
+        <!--app:layout_constraintTop_toBottomOf="@id/create"-->
+        <!--app:layout_constraintStart_toStartOf="parent"-->
+        <!--app:layout_constraintEnd_toEndOf="parent"-->
+        <!--app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--android:text="@string/skip"-->
+        <!--android:textAllCaps="false"-->
+        <!--android:textColor="@android:color/white"-->
+        <!--android:textSize="15sp"-->
+        <!--android:layout_marginBottom="10sp"-->
+        <!--/>-->
+    <!--<TextView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:id="@+id/hindi"-->
+        <!--android:text="@string/hindi"-->
+        <!--app:layout_constraintTop_toBottomOf="@id/skip"-->
+        <!--app:layout_constraintStart_toStartOf="parent"-->
+        <!--app:layout_constraintEnd_toEndOf="parent"-->
+        <!--android:layout_marginTop="10dp"-->
+        <!--android:layout_marginBottom="20dp"-->
+        <!--android:textColor="@android:color/holo_blue_dark"-->
+                <!--/>-->
+
+        <!--</android.support.constraint.ConstraintLayout>-->
+    <!--</ScrollView>-->
+
     <ImageView
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:src="@drawable/ss1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:contentDescription="@string/home_nav"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/signIn"
-        android:id="@+id/logo"
-        />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/signIn"
-        android:text="@string/signIn"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/view"
-        android:layout_margin="10sp"
-        android:textColor="@android:color/black"
-        />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/view"
-        android:text="@string/view_near"
-        android:textSize="18sp"
-        android:textStyle="normal"
-        android:textColor="@android:color/black"
-        app:layout_constraintTop_toBottomOf="@id/signIn"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/offers"
-        android:layout_marginStart="10sp"
-        android:layout_marginTop="5sp"
-        />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/offers"
-        android:text="@string/new_offers"
-        android:textSize="18sp"
-        android:textStyle="normal"
-        android:textColor="@android:color/black"
-        app:layout_constraintTop_toBottomOf="@id/view"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/track"
-        android:layout_marginStart="10sp"
-        android:layout_marginTop="5sp"
-        />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/track"
-        android:text="@string/track"
-        android:textSize="18sp"
-        android:textStyle="normal"
-        android:textColor="@android:color/black"
-        app:layout_constraintTop_toBottomOf="@id/offers"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/already"
-        android:layout_marginStart="10sp"
-        android:layout_marginTop="5sp"
-        />
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/button"
-        android:layout_marginTop="10sp"
-        android:layout_marginStart="10sp"
-        android:layout_marginEnd="10sp"
-        android:id="@+id/already"
-        android:textColor="@android:color/white"
-        app:layout_constraintTop_toBottomOf="@id/track"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/create"
-        android:text="@string/already"
-        android:textAllCaps="false"
-        android:textSize="15sp"
-        android:onClick="goHome"
-        />
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/button"
-        android:layout_marginTop="10sp"
-        android:layout_marginStart="10sp"
-        android:layout_marginEnd="10sp"
-        android:id="@+id/create"
-        android:textColor="@android:color/white"
-        app:layout_constraintTop_toBottomOf="@id/already"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/skip"
-        android:text="@string/create"
-        android:textAllCaps="false"
-        android:textSize="15sp"
-        />
-
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/button"
-        android:layout_marginTop="10sp"
-        android:layout_marginStart="10sp"
-        android:layout_marginEnd="10sp"
-        android:id="@+id/skip"
-        app:layout_constraintTop_toBottomOf="@id/create"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:text="@string/skip"
-        android:textAllCaps="false"
-        android:textColor="@android:color/white"
-        android:textSize="15sp"
-        android:layout_marginBottom="10sp"
         />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/hindi"
-        android:text="@string/hindi"
-        app:layout_constraintTop_toBottomOf="@id/skip"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="20dp"
-        android:textColor="@android:color/holo_blue_dark"
-                />
 
-        </android.support.constraint.ConstraintLayout>
-    </ScrollView>
 </android.support.constraint.ConstraintLayout>
